# skenion-studio

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CITATION.cff  NOTICE  README.md  TRADEMARKS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  desktop-release.yml  npm-artifacts.yml  release-please.yml  semantic-pr.yml  studio-release-artifacts.yml
.storybook/: main.ts  preview.tsx
docs/: ci-release-policy.md  desktop-runtime-profiles.md  frontend-component-architecture.md
docs/qa/: studio-graph-ux-checklist.md
release/: runtime-release.json
scripts/: capture-studio-visual-gate.mjs  check-local-contracts-integration.mjs  check-local-runtime-integration.mjs  check-studio-desktop-asset-s3-existing.sh  package-runtime-sidecar.mjs  package-studio-desktop.mjs  prepare-studio-npm-artifacts.mjs  prepare-studio-release-artifacts.mjs  publish-studio-asset-s3.sh  publish-studio-desktop-asset-s3.sh  stage-runtime-sidecar.mjs  update-studio-release-status.mjs  validate-release-workflow-policy.mjs  validate-stage-runtime-sidecar.mjs  validate-studio-asset-s3-publisher.sh  validate-studio-desktop-asset-s3-publisher.sh  validate-studio-desktop-s3-existing-check.sh
src/: App.tsx  colorScheme.test.ts  colorScheme.ts  main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+181 files in other folders)
