[package]
name = "skenion-studio"
version = "0.44.15"
description = "Desktop shell for skenion studio"
authors = ["skenion contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "skenion_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3" }
